@@ -3,6 +3,10 @@
 	* plot/__default_colormap__.m: Delete.
 	* plot/Makefile (SOURCES): Remove from the list.
 
+2007-09-13  Christof Zeile  <cz-oct07@cvmx.com>
+
+	* pol2cart.m: Make it work with mixed scalar/nonscalar arguments.
+
 2007-09-10  David Bateman  <dbateman@free.fr>
 
 	* plot/__go_draw_axes__.m: Allow gnuplot 4.0 with patches, but
